syntax = "proto3";

package koinos.v1;
option go_package = "github.com/odysseia-greek/makedonia/filippos/gen/go/koinos/v1;koinosv1";

// Response message for health check
message HealthResponse {
  bool healthy = 1;
  string time = 2;
  string version = 3;
  DatabaseHealth database_health = 4;
}

// Nested message for database health details
message DatabaseHealth {
  bool healthy = 1;
  string cluster_name = 2;
  string server_name = 3;
  string server_version = 4;
}